# runits

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  docs.yml
docs/: README.md  gnu-units-parity.md  learning-notes.md  roadmap.md
src/: annotations.rs  cli.rs  config.rs  convert.rs  database.rs  error.rs  eval.rs  expr.rs  format.rs  grammar.pest  lib.rs  main.rs  math.rs  parser.rs  repl.rs  theme.rs
src/database/: CLAUDE.md  constants.rs  mod.rs  seed.rs
src/repl/: CLAUDE.md  helper.rs  mod.rs
src/units/: CLAUDE.md  dimension.rs  mod.rs  quantity.rs  unit.rs
tests/: cli_tests.rs
