[package]
name = "runits"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
owo-colors = "4.3.0"
pest = "2.8.6"
pest_derive = "2.8.6"
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive"] }
strsim = "0.11.1"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
